--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
       - name: Checkout repository
@@ -79,10 +80,9 @@ jobs:
       
       - name: Use private key
         run: | 
-          echo "$EC2_PRIVATE_KEY" > key.pem
-                chmod 600 key.pem
-    # Use the private key in subsequent commands
-    
+          echo "${{ secrets.EC2_PRIVATE_KEY }}" > key.pem
+          chmod 600 key.pem
+
       - name: Deploy to EC2 instance
         run: |
           ssh -i key.pem ec2-user@3.65.228.116 'bash -s' << 'EOF'
@@ -96,11 +96,12 @@ jobs:
             sudo apt-get update
             sudo apt-get -y install docker.io
             
-            # Load the Docker image from the artifact
-            sudo docker load -i target/devopspipeline-app.tar.gz
+            # Pull the Docker image from Docker Hub
+            sudo docker pull theonlyrou/devopspipeline-app:latest
 
             # Run the Docker container
             sudo docker run -d -p 80:8080 theonlyrou/devopspipeline-app:latest
+          EOF
             
       - name: Verify deployment
         run: |
@@ -109,4 +110,3 @@ jobs:
           
           # Check if the application is running
           curl http://3.65.228.116
-          
