--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,10 @@ jobs:
         run: | 
           echo "${{ secrets.EC2_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
+      
+      - name: Add EC2 host key
+        run: |
+          ssh-keyscan -H 3.65.228.116 >> ~/.ssh/known_hosts
 
       - name: Deploy to EC2 instance
         run: |
