--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,9 @@ jobs:
           echo "${{ secrets.EC2_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
       
+      - name: Create SSH directory
+        run: mkdir -p ~/.ssh
+
       - name: Add EC2 host key
         run: |
           ssh-keyscan -H 3.65.228.116 >> ~/.ssh/known_hosts
