--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,8 +80,8 @@ jobs:
       
       - name: Use private key
         run: | 
-          echo "${{ secrets.EC2_PRIVATE_KEY }}" > key.pem
-          chmod 600 key.pem
+          echo "${{ secrets.EC2_PRIV_KEY }}" > key.pem
+          chmod 400 key.pem
       
       - name: Create SSH directory
         run: mkdir -p ~/.ssh
