--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,10 @@ jobs:
           ssh-keyscan -H 3.65.228.116 >> ~/.ssh/known_hosts
 
       - name: Deploy to EC2 instance
-        run: |          
+        run: |
+          ssh-keyscan -H ec2-3-65-228-116.eu-central-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+          ssh-keyscan -H ec2-3-65-228-116.eu-central-1.compute.amazonaws.com >> ~/.ssh/known_hosts2
+          ssh-keyscan -H ec2-3-65-228-116.eu-central-1.compute.amazonaws.com >>/etc/ssh/ssh_known_hosts2
           sudo ssh -i key.pem -v ubuntu@ec2-3-65-228-116.eu-central-1.compute.amazonaws.com 
             # Stop any running application
             sudo systemctl stop your-application.service
