--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Use private key
         run: | 
           echo "${{ secrets.EC2_PRIV_KEY }}" > key.pem
-          chmod 400 key.pem
+          chmod 600 key.pem
       
       - name: Create SSH directory
         run: mkdir -p ~/.ssh
@@ -92,14 +92,13 @@ jobs:
 
       - name: Deploy to EC2 instance
         run: |
-          ssh-keyscan -H ec2-3-65-228-116.eu-central-1.compute.amazonaws.com >> ~/.ssh/known_hosts
-          sudo ssh -i key.pem -v ubuntu@ec2-3-65-228-116.eu-central-1.compute.amazonaws.com 
+          ssh -i key.pem -o StrictHostKeyChecking=no -vvv ubuntu@ec2-3-65-228-116.eu-central-1.compute.amazonaws.com << 'EOF'
             # Stop any running application
-            sudo systemctl stop your-application.service
+            sudo systemctl stop devopspipeline.service
 
             # Remove previous application files
-            sudo rm -rf /opt/your-application/*
-
+            sudo rm -rf /opt/devopspipeline/      
+            
             # Install Docker on the EC2 instance if it's not already installed
             sudo apt-get update
             sudo apt-get -y install docker.io
@@ -110,7 +109,7 @@ jobs:
             # Run the Docker container
             sudo docker run -d -p 80:8080 theonlyrou/devopspipeline-app:latest
           EOF
-            
+          
       - name: Verify deployment
         run: |
           # Wait for the application to start up
