--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,10 +94,10 @@ jobs:
         run: |
           ssh -i key.pem -o StrictHostKeyChecking=no -vvv ubuntu@ec2-3-65-228-116.eu-central-1.compute.amazonaws.com << 'EOF'
             # Stop any running application
-            sudo systemctl stop devopspipeline.service
+            sudo docker stop $(sudo docker ps -q --filter ancestor=theonlyrou/devopspipeline-app:latest)
 
             # Remove previous application files
-            sudo rm -rf /opt/devopspipeline/      
+            sudo docker rm $(sudo docker ps -aq --filter ancestor=theonlyrou/devopspipeline-app:latest)
             
             # Install Docker on the EC2 instance if it's not already installed
             sudo apt-get update
@@ -107,7 +107,7 @@ jobs:
             sudo docker pull theonlyrou/devopspipeline-app:latest
 
             # Run the Docker container
-            sudo docker run -d -p 80:8080 theonlyrou/devopspipeline-app:latest
+            sudo docker run -d -p 8080:8080 theonlyrou/devopspipeline-app:latest
           EOF
           
       - name: Verify deployment
